fix operation selector z-index

--- a/web/app/styles/operation-selector.scss
+++ b/web/app/styles/operation-selector.scss
@@ -8,6 +8,7 @@
   position: absolute;
   margin-left: 35px;
   overflow-y: auto;
+  z-index: 2;
 }
 .operation-selector .box h1 {
   padding: 15px;
